fix image overflow

--- a/styles/_boards.scss
+++ b/styles/_boards.scss
@@ -29,6 +29,10 @@
             display:flex;
             align-items: center;
             gap:2rem;
+            width:100%;
+             img {
+                width:calc(50% - 1rem);
+             }
 
            
 
@@ -40,6 +44,10 @@
             .boards-images {
                 flex-direction: column;
                 width:100%;
+
+                img {
+                    width:100%;
+                }
             }
         }
     }
